# ecommerce

./: .env  .gitignore  Dockerfile  LICENSE  README.md  database_dump.json  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_auto_20210915_1039.py  0004_alter_user_managers.py  0005_employee_company.py  (+1 more)
ecommerce/: settings.py  urls.py
payment/: tasks.py  urls.py  views.py
products_fixture/: all_hrefs.txt  format_json.py  parse_html.py  products.json  pyproject.toml  statistics.json
products_fixture/documents/: cpu_page1.html  cpu_page2.html  cpu_page6.html  cpu_page9.html  gpu_page3.html  gpu_page4.html  motherboard_page10.html  motherboard_page11.html  motherboard_page14.html  motherboard_page15.html  motherboard_page18.html  motherboard_page2.html  motherboard_page21.html  motherboard_page22.html  motherboard_page6.html  motherboard_page7.html  motherboard_page8.html  motherboard_page9.html  ramdimm_page12.html  ramdimm_page15.html  ramdimm_page17.html  ramdimm_page18.html  ramdimm_page19.html  ramdimm_page22.html  ramdimm_page23.html  ramdimm_page25.html  ramdimm_page30.html  ramdimm_page32.html  ramdimm_page33.html  ramdimm_page37.html  ramdimm_page38.html  ramdimm_page39.html  ramdimm_page4.html  ramdimm_page40.html  ramdimm_page41.html  ramdimm_page42.html  ramdimm_page43.html  ramdimm_page46.html  ramdimm_page5.html  ramdimm_page50.html  (+9 more)
shop/: a.py  admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/shop/: models.py  (+4 more)
(+130 files in other folders)
