[tool.poetry]
name = "dns_analytics"
version = "0.1.0"
description = ""
authors = ["dopefresh <dopefresh4000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
loguru = "^0.5.3"
numpy = "^1.21.2"
pandas = "^1.3.2"
selenium = "^3.141.0"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
